--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,20 +3,20 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
+  --background: 0 0% 100%;
   --foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: 240 10% 3.9%;
     --foreground: #ededed;
   }
 }
 
 body {
   color: var(--foreground);
-  background: var(--background);
+  background: hsl(var(--background));
   font-family: Arial, Helvetica, sans-serif;
 }
 
